add connect function

--- a/index.html
+++ b/index.html
@@ -230,6 +230,47 @@
             )
         }
 
+        function connect (mapStateToProps){
+            return (Component) => {
+
+                class Receiver extends React.Component{
+
+                    componentDidMount(){
+                        const { subscribe } = this.props.store;
+
+                        this.unsubscribe = subscribe( () => {
+                            this.forceUpdate();
+                        })
+                    }
+
+                    componentWillUnmount(){
+                        this.unsubscribe();
+                    }
+
+                    render(){
+                        const { dispatch, getState } = this.props.store;
+                        const state = getState();
+                        const stateNeeded = mapStateToProps(state);
+                        return <Component {...stateNeeded} dispatch={dispatch}/>
+
+                    }
+                }
+
+                class ConnectedComponent extends  React.Component{
+                    render() {
+                        return (
+                            <Context.Consumer>
+                                {(store) => <Receiver store={store}/>}
+                            </Context.Consumer>
+                        )
+                    }
+                }
+
+                return ConnectedComponent;
+
+            }
+        }
+
         class Todos extends React.Component{
 
             addTodoItem = (e) => {
@@ -266,6 +307,10 @@
             }
         }
 
+        const ConnectedTodos = connect( (state) => ({
+            todos: state.todos
+        }))(Todos);
+
         class Goals extends React.Component{
             addGoalItem = (e) => {
                 e.preventDefault();
@@ -295,6 +340,33 @@
             }
         }
 
+        const ConnectedGoals = connect( (state) => ({
+            goals: state.goals
+        }))(Goals);
+
+
+        class App extends React.Component {
+            componentDidMount () {
+                const { dispatch } = this.props;
+                dispatch(handleInitialData());
+            }
+
+            render () {
+                return (
+                    this.props.loading
+                        ? <h1>Loading</h1>
+                        : <div>
+                            <ConnectedTodos/>
+                            <ConnectedGoals/>
+                         </div>
+                )
+            }
+        }
+
+        const ConectedApp = connect((state) => ({
+            loading: state.loading
+        }))(App);
+
         class Provider extends React.Component {
             render () {
                 return (
@@ -305,65 +377,6 @@
             }
         }
 
-        class ConectedTodos extends React.Component {
-            render() {
-                return (
-                    <Context.Consumer>
-                        {
-                            ( store ) => {
-                                const { todos } = store.getState();
-                                return <Todos todos={todos} dispatch={store.dispatch}/>
-                            }
-                        }
-                    </Context.Consumer>
-                )
-            }
-        }
-
-        class ConectedGoals extends React.Component {
-            render() {
-                return (
-                    <Context.Consumer>
-                        {
-                            ( store ) => {
-                                const { goals } = store.getState();
-                                return <Goals goals={goals} dispatch={store.dispatch}/>
-                            }
-                        }
-                    </Context.Consumer>
-                )
-            }
-        }
-
-        class ConectedApp extends React.Component {
-            render () {
-                return (
-                    <Context.Consumer>
-                        { (state) => (
-                            <App store={store}></App>
-                        )}
-                    </Context.Consumer>
-                )
-            }
-        }
-
-        class App extends React.Component {
-            componentDidMount () {
-                store.dispatch(handleInitialData());
-                store.subscribe(() => this.forceUpdate());
-            }
-
-            render () {
-                const { loading } = store.getState();
-                return (
-                    loading ? <h1>Loading</h1> :
-                     <div>
-                        <ConectedTodos />
-                        <ConectedGoals />
-                     </div>
-                )
-            }
-        }
         ReactDOM.render(
             <Provider store={store}>
                 <ConectedApp/>
