--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://unpkg.com/babel-standalone@6.15.0/babel.min.js"></script>
     <script src="https://tylermcginnis.com/goals-todos-api/index.js"></script>
     <script src="https://unpkg.com/redux-thunk@2.2.0/dist/redux-thunk.min.js"></script>
+    <script src="https://unpkg.com/react-redux@5.0.6/dist/react-redux.min.js"></script>
 </head>
 <body>
 <div id="app"></div>
@@ -204,37 +205,7 @@
             </ul>
         )
     }
-    function connect (mapStateToProps){
-        return (Component) => {
-            class Receiver extends React.Component{
-                componentDidMount(){
-                    const { subscribe } = this.props.store;
-                    this.unsubscribe = subscribe( () => {
-                        this.forceUpdate();
-                    })
-                }
-                componentWillUnmount(){
-                    this.unsubscribe();
-                }
-                render(){
-                    const { dispatch, getState } = this.props.store;
-                    const state = getState();
-                    const stateNeeded = mapStateToProps(state);
-                    return <Component {...stateNeeded} dispatch={dispatch}/>
-                }
-            }
-            class ConnectedComponent extends  React.Component{
-                render() {
-                    return (
-                        <Context.Consumer>
-                            {(store) => <Receiver store={store}/>}
-                        </Context.Consumer>
-                    )
-                }
-            }
-            return ConnectedComponent;
-        }
-    }
+
     class Todos extends React.Component{
         addTodoItem = (e) => {
             e.preventDefault();
@@ -264,9 +235,11 @@
             )
         }
     }
-    const ConnectedTodos = connect( (state) => ({
+
+    const ConnectedTodos = ReactRedux.connect( (state) => ({
         todos: state.todos
     }))(Todos);
+
     class Goals extends React.Component{
         addGoalItem = (e) => {
             e.preventDefault();
@@ -293,9 +266,11 @@
             )
         }
     }
-    const ConnectedGoals = connect( (state) => ({
+
+    const ConnectedGoals = ReactRedux.connect( (state) => ({
         goals: state.goals
     }))(Goals);
+
     class App extends React.Component {
         componentDidMount () {
             const { dispatch } = this.props;
@@ -312,22 +287,16 @@
             )
         }
     }
-    const ConectedApp = connect((state) => ({
+
+    const ConectedApp = ReactRedux.connect((state) => ({
         loading: state.loading
     }))(App);
-    class Provider extends React.Component {
-        render () {
-            return (
-                <Context.Provider value={this.props.store}>
-                    {this.props.children}
-                </Context.Provider>
-            )
-        }
-    }
+
+
     ReactDOM.render(
-        <Provider store={store}>
+        <ReactRedux.Provider store={store}>
             <ConectedApp/>
-        </Provider>,
+        </ReactRedux.Provider>,
         document.getElementById('app')
     )
 </script>
